# API-TheMovieDB

./: .env  .env-example  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml
app/: __init__.py
app/controllers/auth/: login_controller.py  signup_controller.py
app/controllers/movies/: populars_controller.py  recommendations_controller.py  top_rated_controller.py  trending_controller.py  upcoming_controller.py
app/db/: alembic.ini  session.py
app/decorators/: time.py
app/helpers/: elasticsearch_logger.py  http_status_code.py
app/models/: user.py
app/views/auth/: login_view.py  me_view.py  signup_view.py
app/views/movies/: populars_view.py  recommendations_view.py  top_rated_view.py  trending_view.py  upcoming_view.py
